--- a/component/style/modal.scss
+++ b/component/style/modal.scss
@@ -6,7 +6,7 @@
     top: 0;
 }
 
-.modal-content {
+.modal__content {
     align-content: center;
     background: white;
     border-radius: 30px;
@@ -26,7 +26,7 @@
         margin-bottom: 10px;
     }
 
-    span.close-button {
+    span.close__button {
         cursor: pointer;
         position: absolute;
         text-align: end;
