--- a/component/style/main.scss
+++ b/component/style/main.scss
@@ -7,6 +7,8 @@ main {
 .container__cards {
     justify-content: center;
     flex-direction: column;
+    position: relative;
+    top: 180px;
     
     .container__card {
         flex-direction: row;
