--- a/component/style/_space-map.scss
+++ b/component/style/_space-map.scss
@@ -175,6 +175,28 @@ $w-4: 40px;
 $w-5: 50px;
 $w-6: 60px;
  
+$w-10: 10px;
+$w-20: 20px;
+$w-30: 30px;
+$w-40: 40px;
+$w-50: 50px;
+$w-60: 60px;
+
+$width: (
+  "w-10": $w-10,
+  "w-20": $w-20,
+  "w-30": $w-30,
+  "w-40": $w-40,
+  "w-50": $w-50,
+  "w-60": $w-60
+);
+
+@each $key, $val in $width {
+  .#{$key} {
+    width: $val;
+  }
+}
+
 $w: (
   "w-1": $w-1,
   "w-2": $w-2,
@@ -193,14 +215,20 @@ $w: (
  * height in px
  *
 */
+
+$h-10: 10px * 3;
+$h-20: 20px * 3; 
+$h-30: 30px * 3;
+$h-40: 40px * 3; 
+$h-50: 50px * 3; 
  
 
 $height: (
-  "10":   $m-10,
-  "20":   $m-20,
-  "30":   $m-30,
-  "40":   $m-40,
-  "50":   $m-50
+  "10":   $h-10,
+  "20":   $h-20,
+  "30":   $h-30,
+  "40":   $h-40,
+  "50":   $h-50
 );
  
 @each $key, $val in $height {
@@ -217,11 +245,11 @@ $height: (
  
 
 $height: (
-  "10":   $m-10,
-  "20":   $m-20,
-  "30":   $m-30,
-  "40":   $m-40,
-  "50":   $m-50
+  "10":   $h-10,
+  "20":   $h-20,
+  "30":   $h-30,
+  "40":   $h-40,
+  "50":   $h-50
 );
  
 @each $key, $val in $height {
