fixed bug myBook function js

--- a/component/style/_color.scss
+++ b/component/style/_color.scss
@@ -3,7 +3,7 @@
 $black:          hsl(0, 0%, 0%);
 $bg-card:        hsl(0, 0%, 84%);
 $bg-hover:       hsl(0, 0%, 96%);
-$primary:        hsl(215, 23%, 56%);
+$primary:        hsl(216, 23%, 56%); //#758aa9
 $primary-hover:  hsl(214, 23%, 80%);           
 $text:           hsl(214, 23%, 56%);           
 $white:          hsl(0, 0%, 100%);
