--- a/component/style/modal.scss
+++ b/component/style/modal.scss
@@ -31,7 +31,7 @@
         position: absolute;
         text-align: end;
         font-size: 26px;
-        right: 25px;
+        left: 25px;
         top: 10px;
     }
 }
