--- a/component/style/modal.scss
+++ b/component/style/modal.scss
@@ -11,7 +11,7 @@
     background: white;
     border-radius: 30px;
     flex-direction: column;
-    left: 20%;
+    left: 50%;
     padding: 30px;
     position: relative;
     transform: translate(-50%, -50%);
@@ -21,7 +21,7 @@
     box-shadow: 0 0 16px 3px hsl(215, 23%, 56%);
     background: hsl(215, 23%, 56%);
     color: white;
-    position: relative;
+    position: fixed;
 
     h2 {
         margin-bottom: 10px;
