fixed nav $ responsive

--- a/component/style/header.scss
+++ b/component/style/header.scss
@@ -9,6 +9,7 @@ header {
     background: rgb(252, 252, 252);
     justify-content: center;
     height: 500px;
+    padding-left: 30px;
 
 
     span.btn {
