--- a/component/style/_responsive-map.scss
+++ b/component/style/_responsive-map.scss
@@ -1,8 +1,8 @@
 // Predefined Break-points
 $mediaMaxWidth: 1024px;
 $mediaBp1Width: 960px;
-$mediaBp2Width: 768px; // added for .works section
-$mediaBp3Width: 435px; // added footer
+$mediaBp2Width: 768px;
+$mediaBp3Width: 435px;
 $mediaMinWidth: 50px;
 
 @function translate-media-condition($c) {
