--- a/component/style/_space-map.scss
+++ b/component/style/_space-map.scss
@@ -110,11 +110,11 @@ $padding: (
   .p-#{$key} {
     padding: $val;
   }
-  .p-block-#{$key} {
+  .py-#{$key} {
     padding-block: $val;
   }
 
-  .p-inline-#{$key} {
+  .px-#{$key} {
     padding-block: $val;
   }
 
@@ -136,35 +136,7 @@ $padding: (
 }
 
 /*
- * width in percent
- *
-*/
-
-$w-100: 100%;
-$w-90:  90%;
-$w-80:  80%;
-$w-70:  70%;
-$w-60:  60%;
-$w-50:  50%;
-$w-20:  20%;
-
-$width: (
-  "w-100": $w-100,
-  "w-90": $w-90,
-  "w-80": $w-80,
-  "w-70": $w-70,
-  "w-60": $w-60,
-  "w-50": $w-50,
-  "w-20": $w-20,
-  );
-
-@each $key, $val in $width {
-  .#{$key} {
-    width: $val;
-  }
-}
-/*
- * width in pixel
+ * width in pixel & percent %
  *
  */
 
@@ -174,21 +146,18 @@ $w-3: 30px;
 $w-4: 40px;
 $w-5: 50px;
 $w-6: 60px;
- 
-$w-10: 10px;
-$w-20: 20px;
-$w-30: 30px;
-$w-40: 40px;
-$w-50: 50px;
-$w-60: 60px;
+$w-100: 100%;
+$w-50:  50%;
 
 $width: (
-  "w-10": $w-10,
-  "w-20": $w-20,
-  "w-30": $w-30,
-  "w-40": $w-40,
+  "w-1": $w-1,
+  "w-2": $w-2,
+  "w-3": $w-3,
+  "w-4": $w-4,
+  "w-5": $w-5,
+  "w-6": $w-6,
+  "w-100": $w-100,
   "w-50": $w-50,
-  "w-60": $w-60
 );
 
 @each $key, $val in $width {
@@ -211,24 +180,25 @@ $w: (
     width: ($val * 4);
   }
 }
+
 /*
  * height in px
  *
 */
 
-$h-10: 10px * 3;
-$h-20: 20px * 3; 
-$h-30: 30px * 3;
-$h-40: 40px * 3; 
-$h-50: 50px * 3; 
+$h-1: 1px;
+$h-2: 2px; 
+$h-3: 3px;
+$h-4: 4px; 
+$h-5: 5px; 
  
 
 $height: (
-  "10":   $h-10,
-  "20":   $h-20,
-  "30":   $h-30,
-  "40":   $h-40,
-  "50":   $h-50
+  "1":   $h-1,
+  "2":   $h-2,
+  "3":   $h-3,
+  "4":   $h-4,
+  "5":   $h-5
 );
  
 @each $key, $val in $height {
@@ -245,11 +215,11 @@ $height: (
  
 
 $height: (
-  "10":   $h-10,
-  "20":   $h-20,
-  "30":   $h-30,
-  "40":   $h-40,
-  "50":   $h-50
+  "1":   $h-1,
+  "2":   $h-2,
+  "3":   $h-3,
+  "4":   $h-4,
+  "5":   $h-5
 );
  
 @each $key, $val in $height {
