--- a/assets/style/header.scss
+++ b/assets/style/header.scss
@@ -35,6 +35,7 @@
             border: none;
             outline: none;
             width: 400px;
+            background: transparent;
         }
 
         > svg {
