added bg image body

--- a/assets/style/_color.scss
+++ b/assets/style/_color.scss
@@ -5,7 +5,7 @@ $bg-card:        hsl(0, 0%, 84%);
 $bg-hover:       hsl(0, 0%, 96%);
 $primary:        hsl(216, 23%, 56%); //#758aa9
 $primary-hover:  hsl(214, 23%, 80%);           
-$text:           hsl(214, 23%, 56%);           
+$text:           hsl(214, 23%, 56%); //#758ba9
 $white:          hsl(0, 0%, 100%);
 
 
