fixed hover color svg

--- a/assets/style/nav.scss
+++ b/assets/style/nav.scss
@@ -43,7 +43,7 @@ nav {
     svg {
         width: 20px;
         :hover {
-            fill: red;
+            fill: rgb(227, 45, 45);
         }
     }
 }
