--- a/assets/style/nav.scss
+++ b/assets/style/nav.scss
@@ -22,6 +22,7 @@ nav {
         border-radius: 1em; 
         color: white;
         height: 310px;
+        overflow: auto;
         padding: 10px;
         right: -343px;
         transition: all 0.3s ease;
