--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -1,11 +1,10 @@
 // scss style-map
-@import 'reset-page';
-@import 'font-map';
-@import 'responsive-map';
-@import 'space-map';
-
 // import style page
-@import 'header.scss';
-@import 'main.scss';
-@import 'modal.scss';
-@import 'nav.scss';
+@import 'modal.scss' ;
+@import 'nav.scss' ;
+
+@import 'reset-page' ;
+@import 'font-map' ;
+@import 'space-map' ;
+@import 'header' ;
+@import 'main' ;
